--- a/.github/workflows/update-qa.yml
+++ b/.github/workflows/update-qa.yml
@@ -20,7 +20,7 @@ jobs:
         uses: s0/git-publish-subdir-action@develop
         env:
           REPO: self
-          BRANCH: build-production
+          BRANCH: qa
           FOLDER: .
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MESSAGE: 'Build: ({sha}) {msg}'
