--- a/.github/workflows/update-qa.yml
+++ b/.github/workflows/update-qa.yml
@@ -22,5 +22,5 @@ jobs:
           REPO: self
           BRANCH: qa
           FOLDER: .
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.REBASE_TOKEN }}
           MESSAGE: 'Build: ({sha}) {msg}'
